syntax = "proto3";

package cinema.domain;

import "akkaserverless/annotations.proto";

option java_outer_classname = "CinemaDomain";

option (akkaserverless.file).event_sourced_entity = {
    name: "Cinema"
    entity_type: "cinema"
    state: "CinemaState"
};

message CinemaState {
    int32 value = 1;
}

message AudienceAdded {
    string id = 1;
}
